[package]
name = "noronha"
version = "0.1.0-SNAPSHOT"
authors = ["Murilo Pereira <murilo@murilopereira.com>"]

[dependencies]
actix-web = "0.7.3"
bytes = "0.4.9"
config = "0.9.0"
crossbeam-channel = "0.2.4"
either = "1.5.0"
futures = "0.1.23"
im = { version = "11.0.1", features = ["arc", "serde"] }
lazy_static = "1.0.2"
libc = "0.2.43"
log = "0.4"
log4rs = "0.8"
reqwest = "0.8.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.1.3"
state = { version = "0.4.1", features = ["tls"] }
uuid = { version = "0.6.5", features = ["serde"] }

[dev-dependencies]
